feat!: add clangd language server

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 languageserver/verible/*.*
 !languageserver/verible/verible-verilog-lint.config
 
+# ignore clangd implementation
+languageserver/clangd_18.1.3/**
+
