feat: edit verible configurations

--- a/language_server_config/verible/verible-verilog-lint.config
+++ b/language_server_config/verible/verible-verilog-lint.config
@@ -1,5 +1,6 @@
 -always-comb
 -explicit-parameter-storage-type
+-forbidden-macro
 +forbid-negative-array-dim
 +line-length=length:120
 +mismatched-labels
@@ -9,3 +10,4 @@
 +signal-name-style
 +suspicious-semicolon
 -unpacked-dimensions-range-ordering
++uvm-macro-semicolon
